# em_data

./: .buildinfo  README.md  datasets.html  datasets_db.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.github/: ISSUE_TEMPLATE.yaml
.github/ISSUE_TEMPLATE/: new_dataset.yaml
.github/scripts/: issue_to_yaml.py
.github/workflows/: build.yml  documentation.yaml  on_new_issue.yml
_downloads/53417b57f0fdde5448717d79d1123293/: loading_quantem.py
_downloads/a5c0070c21ff75e8da19938997a5b923/: loading_hyperspy.ipynb
_downloads/afb6ede89314dfd007309bec1097bf09/: loading_quantem.ipynb
_downloads/c3b596a52d1846654342a4914bb57abe/: changing_download_location.ipynb
_downloads/c63cc50fd22c6a81d82623b7078c30b7/: loading_hyperspy.py
_sources/: index.rst.txt  intro.rst.txt  sg_execution_times.rst.txt
_sources/examples/: changing_download_location.rst.txt  index.rst.txt  loading_hyperspy.rst.txt  loading_quantem.rst.txt  sg_execution_times.rst.txt
doc/source/: conf.py  datasets.rst  index.rst  intro.rst
doc/source/reference/: index.rst
em_database/: __init__.py  __init__.pyi  _build_docs.py  _create_stubs.py  downloadable_dataset.py
em_database/data/: __init__.py  __init__.pyi
em_database/datasets/: AlNanocrystals.yaml  BilayerWS2.yaml  FeAlStripes.yaml  MgONanoCrystals.yaml  NiEBSDLarge.yaml  PdNiP.yaml  SPEDAg.yaml  ZrNbPercipitate.yaml  json-schema.json
em_database/tests/: __init__.py  test_directory.py  test_load_data.py
examples/: README.rst  changing_download_location.html  changing_download_location.py  index.html  loading_hyperspy.html  loading_hyperspy.py  loading_quantem.html  loading_quantem.py  sg_execution_times.html
reference/: index.html
